<resources>
    <string name="app_name">Wasfa Doctor</string>
    <string name="title_activity_splash">Wasfa Doctor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_order_id"><u>#APM10061</u></string>
    <string name="home">Home</string>
    <string name="medications">Medications</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="prescriptions_new">Prescriptions New</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="reports">Reports</string>
    <string name="date">Date</string>
    <string name="selling_price">Selling Price</string>
    <string name="appreciation_amount">Appreciation Amount</string>
    <string name="medicine">Medicine</string>
    <string name="report">Report</string>
</resources>