<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customBottomNav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#FAFAFE"
    android:elevation="8dp"
    android:gravity="center"
    android:orientation="horizontal">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lyt_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home_selected"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/nav_selection" />

                <ImageView
                    android:id="@+id/nav_home"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="Home"
                    android:src="@drawable/nav_doc_home_selected" />

                <TextView
                    android:id="@+id/txt_nav_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/home"
                    android:textColor="@color/doctor_main_color"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_med"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_med_selected"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/nav_selection"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/nav_med"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="Home"
                    android:src="@drawable/nav_med" />

                <TextView
                    android:id="@+id/txt_nav_med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/medications"
                    android:textColor="#9E9E9E"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="Home"
                    android:src="@drawable/nav_med" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/medications"
                    android:textColor="#9E9E9E"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_prescriptions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_pres_selected"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/nav_selection"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/nav_pres"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="Home"
                    android:src="@drawable/nav_rx" />

                <TextView
                    android:id="@+id/txt_nav_pres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/report"
                    android:textColor="#9E9E9E"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_settings_selected"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/nav_selection"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/nav_settings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="Home"
                    android:src="@drawable/nav_settings" />

                <TextView
                    android:id="@+id/txt_nav_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings"
                    android:textColor="#9E9E9E"
                    android:textSize="10dp" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="68dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/white">

            <ImageView
                android:id="@+id/nav_add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/nav_add" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</LinearLayout>
